--- a/index.css
+++ b/index.css
@@ -25,8 +25,9 @@
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
-@media (min-width: 0px) {
+@media (min-width: 0px) and (min-height: 0) {
   .mediaViewInfo {
     --web-view-name: quiyet-brul-portfolio;
     --web-view-id: quiyet_brul_portfolio;
@@ -768,68 +769,89 @@ html {
     text-align: left;
     font-family: Helvetica Neue;
     font-style: normal;
-    font-weight: normal;
+    font-weight: lighter;
     font-size: 100px;
     color: rgba(0, 0, 0, 1);
     letter-spacing: 1px;
   }
 
-  .Icon_ionic_ios_arrow_down {
-    overflow: visible;
-    position: absolute;
-    width: 49.624px;
-    height: 28.273px;
-    left: 23px;
-    top: 29.415px;
-    transform: matrix(1, 0, 0, 1, 0, 0);
-    transition: transform 0.2s;
-  }
-
-  #click_me_scroll {
-    position: absolute;
-    width: 97px;
-    height: 57.689px;
-    left: 912px;
-    top: 986px;
+  #click_me_button {
+		position: absolute;
+		width: 250px;
+		height: 160px;
+		left: 835px;
+		top: 795px;
     overflow: visible;
     animation-name: click_me;
     animation-timing-function: linear;
     align-self: flex-end;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
-    transition: transform 0.2s;
-  }
-
-  #click_me {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    overflow: visible;
-    width: 98px;
-    white-space: nowrap;
-    line-height: 40px;
-    margin-top: -10px;
-    text-align: right;
-    font-family: PT Mono;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    color: rgba(0, 0, 0, 1);
-    letter-spacing: 0.05px;
-    transition: transform 0.2s;
-  }
+    transition: transform 0.1s;
+	}
+	.scroll_container {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 160px;
+		left: 0px;
+		top: 0px;
+	}
+	.Icon_ionic_ios_arrow_down {
+		overflow: visible;
+		position: absolute;
+		width: 49.624px;
+		height: 28.273px;
+		left: 100px;
+		top: 80.415px;
+		transform: matrix(1,0,0,1,0,0);
+	}
+	#click_me {
+		position: absolute;
+		left: 77px;
+		top: 51px;
+		overflow: visible;
+		width: 98px;
+		white-space: nowrap;
+		line-height: 40px;
+		margin-top: -10px;
+		text-align: right;
+		font-family: PT Mono;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 20px;
+		color: rgba(0,0,0,1);
+		letter-spacing: 0.05px;
+	}
 
   @keyframes click_me {
-    0% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(-100px);
-    }
     100% {
       transform: translateY(0);
     }
+    50% {
+      transform: translateY(-20px);
+    }
+    0% {
+      transform: translateY(0);
+    }
   }
+
+  /* @keyframes click_me {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  } */
+
   a {
     color: rgba(150, 150, 150, 1);
     text-decoration: none;
@@ -845,17 +867,17 @@ html {
   }
 
   .about:hover {
-    color: rgb(0,0,0) !important;
+    color: rgb(0, 0, 0) !important;
     transform: scale(1.5);
     font-size: 35px !important;
   }
-  .projects:hover{
-    color: rgb(0,0,0) !important;
+  .projects:hover {
+    color: rgb(0, 0, 0) !important;
     transform: scale(1.5);
     font-size: 35px !important;
   }
 
-  #click_me_scroll:hover{
+  #click_me_scroll:hover {
     transform: scale(1.5);
   }
 }
